<resources>
    <string name="app_name">MakeKotlin</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="string_tab_bar_home">码可</string>
    <string name="string_tab_bar_yl">有料</string>
    <string name="string_tab_bar_mine">我的</string>

    <string name="text_error_tip">网络繁忙，点我重试</string>
    <string name="text_loading_tip">拼命加载中...</string>
    <string name="text_null_tip">这里毛都没一根...</string>
    <string name="string_plus">快+PLUS</string>
    <string name="string_invitation">邀请码友</string>
    <string name="string_fixed_code">固定码</string>
    <string name="string_scan">扫码收银</string>

    <string name="string_material_menu_ls">流水</string>
    <string name="string_material_menu_yqmy">邀请码友</string>
    <string name="string_material_menu_rmyq">人脉友圈</string>
    <string name="string_material_menu_kplus">快+PLUS</string>
    <string name="string_material_menu_gdm">固定码</string>
    <string name="string_material_menu_umi">U米</string>
    <string name="string_material_menu_shgl">商户管理</string>
    <string name="string_material_menu_shtz">商户拓展</string>
    <string name="string_material_menu_xykcp">信用卡测评</string>
    <string name="string_material_menu_tjbk">推荐办卡</string>
    <string name="string_material_menu_jfdh">积分兑换</string>
    <string name="string_material_menu_kjdh">卡劵兑换</string>
    <string name="string_material_menu_sc">商城</string>
    <string name="string_material_menu_cxwy">出行无忧</string>

    <string name="string_mine_menu_smrz">实名认证</string>
    <string name="string_mine_menu_xykgl">信用卡管理</string>
    <string name="string_mine_menu_czzn">操作指南</string>
    <string name="string_mine_menu_zskf">专属客服</string>
    <string name="string_mine_menu_gymk">关于码可</string>
    <string name="string_mine_menu_tysz">通用设置</string>
    <string name="string_user_account_title"><![CDATA[登录&注册]]></string>
    <string name="string_user_account_subtitle">欢迎来到码可</string>
    <string name="string_user_account_login">登录</string>
    <string name="string_account_hint">请输入手机号</string>
    <string name="string_image_tip">图片</string>
    <string name="string_welcome_tip">欢迎回来！</string>
    <string name="string_password_hint">请输入登录密码</string>
    <string name="string_password_forget">忘记密码?</string>
    <string name="string_register_title">注册</string>
    <string name="string_register_subtitle">请阅读协议并设置登录密码</string>
    <string name="string_register_password_hint">请设置登录密码</string>
    <string name="string_register_pwd_tip">密码至少包含6~18位字母、数字组合，区分大小写</string>
    <string name="string_code_hint">请输入验证码</string>
    <string name="string_code_btn">获取验证码</string>
    <string name="string_privacy_agreement">《隐私条款》</string>
    <string name="string_service_agreement">《服务协议》</string>
    <string name="string_agreement_tip">我已阅读并同意《服务协议》和《隐私条款》</string>
    <string name="string_agreement_toast">请阅读并同意《服务协议》和《隐私条款》</string>
    <string name="string_sure_password_hint">请确认登录密码</string>
    <string name="string_guide_start_tip">开启码可</string>
    <string name="string_agreement_title">码可用户协议和隐私政策</string>
    <string name="string_agreement_cancel">不同意</string>
    <string name="string_confirm_common_title">温馨提示</string>
    <string name="string_user_logout_tip">确认退出登录？</string>
    <string name="string_agreement_sure">同意</string>
    <string name="string_agreement_popup_str1">我们非常注重您的个人信息和隐私保护，为了更好的保证您的个人权益，请您认证阅读</string>
    <string name="string_agreement_popup_str2">和</string>
    <string name="string_agreement_popup_str3">的全部内容，同意并接收全部条款后开始使用我们的产品和服务。\n点击同意视为接受全部条款，开始体验码可的产品和服务吧</string>
    <string name="string_link_agreement_service">http://ossmk2.jfpays.com/www_make_v1/h5/agreement_service.html</string>
    <string name="string_link_agreement_privacy">http://ossmk2.jfpays.com/www_make_v1/h5/agreement_privacy.html</string>
    <string name="string_http_code_tip">请求失败，请稍后再试</string>
    <string name="string_sms_send_success_tip">发送验证码成功</string>
    <string name="string_register_success_tip">注册成功</string>
    <string name="string_error_phone_tip">手机号码输入有误</string>

</resources>
