<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.UserAccountActivity">

    <com.owulia.makekotlin.ui.widget.UserHeaderView
        android:id="@+id/vUserHeader"
        android:layout_marginTop="40dp"
        app:title="@string/string_register_title"
        app:subtitle="@string/string_register_subtitle"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_below="@+id/vUserHeader"
        android:layout_marginTop="34dp"
        android:background="@drawable/layer_bottom_border_bg"
        android:orientation="horizontal"
        android:id="@+id/vUserInputBox"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:autofillHints="string/string_account_hint"
            android:inputType="text"
            android:hint="@string/string_register_password_hint"
            android:background="@null"
            android:textColor="@color/colorText3"
            android:textColorHint="@color/colorHint"
            android:layout_width="0dp"
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_height="42dp"/>
        <include layout="@layout/widget_input_clear_btn"/>
        <ImageView
            android:contentDescription="@string/string_image_tip"
            android:src="@mipmap/ic_password_eye_off"
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:layout_width="42dp"
            android:layout_height="42dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/vUserInputBox"
        android:layout_marginTop="20dp"
        android:background="@drawable/layer_bottom_border_bg"
        android:orientation="horizontal"
        android:id="@+id/vUserCodeInputBox"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:autofillHints="string/string_account_hint"
            android:inputType="text"
            android:hint="@string/string_code_hint"
            android:background="@null"
            android:textColor="@color/colorText3"
            android:textColorHint="@color/colorHint"
            android:layout_width="0dp"
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_height="42dp"/>
        <include layout="@layout/widget_input_clear_btn"/>
        <TextView
            android:id="@+id/vCodeButton"
            android:text="@string/string_code_btn"
            android:textColor="@color/colorMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
        android:id="@+id/vPasswordTip"
        android:layout_marginTop="17dp"
        android:layout_marginStart="20dp"
        android:textSize="14sp"
        android:textColor="@color/colorText9"
        android:layout_below="@+id/vUserCodeInputBox"
        android:text="@string/string_register_pwd_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_below="@+id/vPasswordTip"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/vAgreementButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
<!--        <RadioButton-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"/>-->
        <TextView
            android:id="@+id/vAgreement"
            android:text="@string/string_agreement_tip"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
        <include
            android:layout_width="140dp"
            android:layout_height="56dp"
            layout="@layout/widget_button" />
    </LinearLayout>

    <include layout="@layout/widget_user_bottom_logo"/>

</RelativeLayout>