<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.UserAccountActivity">

    <com.owulia.makekotlin.ui.widget.UserHeaderView
        android:id="@+id/vUserHeader"
        android:layout_marginTop="80dp"
        app:icon="@mipmap/ic_account_logo"
        app:title="@string/string_user_account_title"
        app:subtitle="@string/string_user_account_subtitle"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_below="@+id/vUserHeader"
        android:layout_marginTop="34dp"
        android:background="@drawable/layer_bottom_border_bg"
        android:orientation="horizontal"
        android:id="@+id/vUserInputBox"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.owulia.makekotlin.widget.WowClearEditText
            android:gravity="center_vertical"
            android:id="@+id/vAccountInput"
            android:autofillHints="string/string_account_hint"
            android:inputType="phone"
            android:maxLength="@integer/integer_phone_max_length"
            android:hint="@string/string_account_hint"
            android:background="@null"
            android:textColor="@color/colorText3"
            android:textColorHint="@color/colorHint"
            android:layout_width="0dp"
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_height="42dp"/>
        <ImageView
            android:id="@+id/vHistoryOpen"
            android:contentDescription="@string/string_image_tip"
            android:src="@drawable/ic_arrow_down_999"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:layout_width="42dp"
            android:layout_height="42dp"/>
    </LinearLayout>

    <com.owulia.makekotlin.widget.WowMaxHeightOrMaxCountRecyclerView
        android:visibility="gone"
        android:paddingEnd="20dp"
        android:paddingStart="40dp"
        app:maxHeight="150dp"
        android:layout_below="@+id/vUserInputBox"
        android:id="@+id/vHistoryAccountBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/text"
        android:layout_below="@+id/vHistoryAccountBox"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="1dp"/>
        <include
            android:layout_width="140dp"
            android:layout_height="56dp"
            layout="@layout/widget_button" />
    </LinearLayout>

    <include layout="@layout/widget_user_bottom_logo"/>

</RelativeLayout>